# melo

./: .coderabbit.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  example.env  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
app/: main.py
app/api/: __init__.py  _song_utils.py  favorites.py  playlists.py  responses.py  songs.py
app/core/: __init__.py  config.py  db.py  deps.py  exception_handlers.py  logging.py  middleware.py
app/models/: __init__.py  favorite.py  playlist.py  song.py
app/schemas/: envelope.py  playlist.py  song.py
app/services/: downloader.py  processor.py  storage.py
app/workers/: __init__.py  celery_app.py  tasks.py
docs/: API_DOC.md  ARCHITECTURE.md  DESIGN.md  PRD.md  SPRINT_X.md  Sprint-2.md  Sprint-3.md  USER-FLOW.md  handoff-fznZ1H.md  handoff.md
docs/sprints/: Sprint-1.md  Sprint-3.md  Sprint-4.md  Sprint-5.md
infra/: docker-compose.monitoring.yml  monitoring.sh  setup-infra.sh
infra/grafana/provisioning/dashboards/: all.yml
infra/grafana/provisioning/datasources/: all.yml
infra/loki/: loki.yml
infra/prometheus/: prometheus.yml
infra/promtail/: promtail.yml
infra/pyroscope/: pyroscope.yml
infra/tempo/: tempo.yml
tests/: conftest.py  docker-compose.test.yml  pytest_plugin.py  smoke_test.sh  smoke_ui.sh
tests/integration/: conftest.py  test_db.py  test_favorites_api.py  test_playlists_api.py  test_preview_api.py  test_songs_api.py  test_songs_api_filtering.py
tests/unit/: conftest.py  test_downloader.py  test_favorites.py  test_playlist_schemas.py  test_preview.py  test_processor.py  test_schemas.py  test_storage.py
ui/: Dockerfile  api.js  app.js  components.js  index.html  nginx.conf  player.js  style.css
