[project]
name = "melo"
version = "0.3.0"
description = "Personal self-hosted audio library — paste a YouTube URL, get a trimmed playable mp3."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

authors = [
    { name = "Karthik Udyawar", email = "karthikajithudyawar@gmail.com" },
]

keywords = ["audio", "youtube", "self-hosted", "fastapi", "minio"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "minio>=7.2.0",
    "yt-dlp>=2026.03.17",
    "pydantic-settings>=2.5.0",
    "structlog>=24.1.0",
    "uuid6>=2025.0.1",
]

[project.urls]
Homepage = "https://github.com/KarthikUdyawar/melo"
Repository = "https://github.com/KarthikUdyawar/melo"
Issues = "https://github.com/KarthikUdyawar/melo/issues"
Changelog = "https://github.com/KarthikUdyawar/melo/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-docker>=3.1.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
    "pre-commit>=4.6.0",
    "psycopg2-binary>=2.9.9",
    "coverage>=7.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.bandit]
exclude_dirs = ["tests", "venv"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "minio.*",
    "yt_dlp.*",
    "structlog.*",
    "pydantic_settings.*",
]
ignore_missing_imports = true
disable_error_code = ["misc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

addopts = ["-v"]

pythonpath = ["."]

[tool.coverage.run]
source = ["app"]
relative_files = true

omit = [
    "app/core/logging.py",
    "app/workers/tasks.py",
    "app/workers/celery_app.py",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

show_missing = true
skip_covered = false
